ircv3_parse_derive/tests/ui/fail/07_invalid_source_fail.rs
use ircv3_parse_derive::FromMessage;

#[derive(FromMessage)]
struct M {
    #[irc(source = "invalid")]
    field: String,
}

fn main() {}
