ircv3_parse_derive/tests/ui/fail/07_invalid_source_fail.stderr
error: invalid source field (valid options: `name`, `user`, or `host`)
 --> tests/ui/fail/07_invalid_source_fail.rs:5:20
  |
5 |     #[irc(source = "invalid")]
  |                    ^^^^^^^^^
